--- a/VisaLetter.tex
+++ b/VisaLetter.tex
@@ -10,7 +10,8 @@
 \usepackage{enumitem}
 \usepackage{setspace}
 \usepackage[normalem]{ulem}
-
+\usepackage{fontspec}
+\usepackage{eforms}
 \usepackage{idscoms}
 
 
