--- a/VisaLetter.tex
+++ b/VisaLetter.tex
@@ -11,7 +11,7 @@
 \usepackage{setspace}
 \usepackage[normalem]{ulem}
 \usepackage{fontspec}
-\usepackage{eforms}
+%\usepackage{eforms}
 \usepackage{idscoms}
 
 
