--- a/VisaLetter.tex
+++ b/VisaLetter.tex
@@ -15,7 +15,7 @@
 
 %\usepackage{showframe}
 
-\setmainfont{Brave Sans}
+%\setmainfont{Brave Sans}
 \usepackage{changepage,titlesec}
 \titleformat{\section}{\fontsize {10}{10} \selectfont }{\textbf{\thesection.}}{4mm}{}
 \titlespacing*{\section} {0mm}{3mm}{3mm }
