--- a/idscoms.sty
+++ b/idscoms.sty
@@ -4,7 +4,7 @@
 \usepackage{fontspec}
 \usepackage{eforms}
 
-\setmainfont{Brave Sans}
+%\setmainfont{Brave Sans}
 
 %
 \newcommand* {\LineText}[2] {{\fontsize{#1}{#1} \selectfont{#2}}}
