--- a/VisaLetter.tex
+++ b/VisaLetter.tex
@@ -39,7 +39,7 @@
 
 \LineText{8}{Date} \FieldName{ApplicationDetails}{Date} \InputField{5mm}{7pt}{ApplicationDetails}{Date}\\[10mm]
 
-\LineText{8}{\textbf {THE ITALIAN HIGH COMMISSION}}\\[3mm]
+\LineText{8}{\textbf {THE SERBIAN HIGH COMMISSION}}\\[3mm]
   
 \LineText{8}{To whom it may concern}\\[10mm]
  
