--- a/VisaLetter.tex
+++ b/VisaLetter.tex
@@ -39,11 +39,11 @@
 
 \LineText{8}{Date} \FieldName{ApplicationDetails}{Date} \InputField{5mm}{7pt}{ApplicationDetails}{Date}\\[10mm]
 
-\LineText{8}{\textbf {СРПСКА КОМИСИЈА}}\\[3mm]
+\LineText{8}{\textbf {THE SERBIAN HIGH COMMISSION}}\\[3mm]
   
 \LineText{8}{To whom it may concern}\\[10mm]
  
-\LineText{8}{\textbf {RE: АПЛИКАЦИЈА ВИЏЦВАСАС}}\\[3mm]
+\LineText{8}{\textbf {RE: VISA APPLICATION}}\\[3mm]
   
 \LineText{8}{This letter serves to advise that \FieldName{ApplicantDetails}{Title} \FieldName{ApplicantDetails}{Initials} \FieldName{ApplicantDetails}{LastName}}
   \InputField{5mm}{7pt}{ApplicantDetails}{Title} 
@@ -52,11 +52,11 @@
  
  \LineText{8}{has held an account \FieldName{ApplicantDetails}{AccountNumber}} \InputField{5mm}{7pt}{ApplicantDetails}{AccountNumber} \\[3mm]
  
- \LineText{8}{in the кнјиге of \FieldName{ApplicantDetails}{BankName}} \InputField{5mm}{7pt}{ApplicantDetails}{BankName} \\[3mm]
+ \LineText{8}{in the books of \FieldName{ApplicantDetails}{BankName}} \InputField{5mm}{7pt}{ApplicantDetails}{BankName} \\[3mm]
  
  \LineText{8}{since \FieldName{ApplicantDetails}{ClientOfTheBankSince}} \InputField{5mm}{7pt}{ApplicantDetails}{ClientOfTheBankSince} \\[3mm]
   
- \LineText{8}{The applicant’s s рацун is operated in accordance with the facilities granted to the applicant. The applicant has not requested the closure of the said account at the date of this letter.}\\[3mm]
+ \LineText{8}{The applicant’s s account is operated in accordance with the facilities granted to the applicant. The applicant has not requested the closure of the said account at the date of this letter.}\\[3mm]
   
  \LineText{8}{ACCOUNT HOLDERS NAME  \FieldName{ApplicantDetails}{Initials} \FieldName{ApplicantDetails}{LastName}}\\[3mm]
    
